--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,15 @@
         android:theme="@style/Theme.HuddleUp"
         tools:targetApi="31">
         <activity
+            android:name=".EventCheckedInActivity"
+            android:exported="false" />
+        <activity
             android:name=".SiginActivity"
             android:exported="false" />
+        <activity
+            android:name=".detailEvent"
+            android:exported="false"/>
+
         <activity
             android:name=".LauncherActivity"
             android:exported="true">
@@ -24,13 +31,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".detailEvent"
-            android:exported="false" />
+
         <activity
             android:name=".LoginActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
+
     </application>
 
 </manifest>
