--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.huddleup">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/logo"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HuddleUp"
-        tools:targetApi="31">
-        <activity
-            android:name=".EventCheckedInActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SiginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".detailEvent"
-            android:exported="false"/>
-        <activity
-            android:name=".WishlistActivity"
-            android:exported="false"/>
-      
-        <activity
-            android:name=".LauncherActivity"
+        android:theme="@style/Theme.AppCompat.DayNight">
+
+        <!-- Aktivitas utama -->
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,13 +18,18 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".NotificationActivity"
-            android:exported="false" />
- 
+        <!-- Aktivitas untuk form -->
+        <activity android:name=".EventFormActivity" />
+
+        <!-- Nonaktifkan sementara activity yang tidak diperlukan -->
+        <!-- <activity android:name=".detailEvent" /> -->
+        <!-- <activity android:name=".EventCheckedInActivity" /> -->
+        <!-- <activity android:name=".LauncherActivity" /> -->
+        <!-- <activity android:name=".LoginActivity" /> -->
+        <!-- <activity android:name=".NotificationActivity" /> -->
+        <!-- <activity android:name=".SiginActivity" /> -->
+        <!-- <activity android:name=".WishlistActivity" /> -->
+
     </application>
 
 </manifest>
