--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.HuddleUp"
         tools:targetApi="31">
         <activity
+            android:name=".EventKu"
+            android:exported="false" >
+        </activity>
+        <activity
             android:name=".EventCheckedInActivity"
             android:exported="false" />
         <activity
@@ -20,27 +24,27 @@
             android:exported="false" />
         <activity
             android:name=".detailEvent"
-            android:exported="false"/>
-        <activity
-            android:name=".WishlistActivity"
-            android:exported="false"/>
-      
-        <activity
-            android:name=".LauncherActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".WishlistActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LauncherActivity"
+            android:exported="false">
 
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".NotificationActivity"
             android:exported="false" />
- 
     </application>
 
 </manifest>
