--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".EventKu"
-            android:exported="false" >
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".EventCheckedInActivity"
             android:exported="false" />
@@ -24,20 +23,18 @@
             android:exported="false" />
         <activity
             android:name=".detailEvent"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".WishlistActivity"
             android:exported="false" />
         <activity
             android:name=".LauncherActivity"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
