--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -52,4 +54,14 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
+
+
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:33.12.0')
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+
 }
