--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // build.gradle (Project-level)
-
 plugins {
     id 'com.android.application' version '8.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.23' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 task clean(type: Delete) {
