--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-    id 'com.android.application'
+    alias(libs.plugins.android.application)
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-
 }
 
 android {
@@ -57,11 +56,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage:20.3.0'
 
-
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:33.12.0')
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-
-
 }
