--- a/settings.gradle
+++ b/settings.gradle
@@ -12,12 +12,12 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
 
-rootProject.name = "HuddleUp"
+rootProject.name = 'HuddleUp'
 include ':app'
