--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.HuddleUp"
         tools:targetApi="31">
         <activity
+            android:name=".AddEditNoteActivity"
+            android:exported="false" />
+        <activity
             android:name=".SiginActivity"
             android:exported="false" />
         <activity
@@ -29,8 +32,7 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
