--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.huddleup">
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/logo"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo"
+        android:label="HuddleUp"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HuddleUp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.HuddleUp">
+
         <activity
-            android:name=".SiginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LauncherActivity"
+            android:name=".EventDashboardActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".detailEvent"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false">
-        </activity>
-    </application>
 
+        <activity android:name=".AddEventActivity"
+            android:exported="false" />
+    </application>
 </manifest>
