--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ firebaseBom = "33.2.0"
 androidxAnnotation = "1.8.1"
 coreKtx = "1.13.1"
 lifecycleRuntimeKtx = "2.8.3"
+kotlin = "1.9.23"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -31,3 +32,4 @@ firebase-database = { group = "com.google.firebase", name = "firebase-database" 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 googleGmsGoogleServices = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
+kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
