--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
+}
+
 plugins {
     alias(libs.plugins.androidApplication) apply false
     id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
     alias(libs.plugins.googleGmsGoogleServices) apply false
+}
+
+allprojects {
+    configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'org.jetbrains.kotlin') {
+                details.useVersion '1.9.22'
+                details.because 'Force use of a single Kotlin version to avoid duplicate classes'
+            }
+        }
+    }
 }
