--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.firebase:firebase-database:20.3.0' // sesuaikan versinya
     implementation 'com.cloudinary:cloudinary-android:2.3.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 
 }
