--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.cloudinary:cloudinary-android:2.4.0'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
+
 
 
 }
