update pendaftaran event

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,9 @@
             android:name=".N_detailEvent"
             android:exported="false" />
         <activity
-            android:name=".WishlistActivity"
+            android:name=".D_WishlistActivity"
+            android:exported="false" />
+        <activity android:name=".D_WishlistDetailActivity"
             android:exported="false" />
         <activity
             android:name=".N_LauncherActivity"
@@ -50,7 +52,7 @@
             android:name=".N_LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".NotificationActivity"
+            android:name=".J_NotificationActivity"
             android:exported="false" />
     </application>
 
