--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.HuddleUp"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:replace="android:fullBackupContent">
         <activity android:name=".Z_MainActivity"
             android:exported="false" />
         <activity
@@ -31,16 +32,11 @@
             android:name=".N_detailEvent"
             android:exported="false" />
         <activity
-            android:name=".WishlistActivity"
+            android:name=".D_WishlistActivity"
             android:exported="false" />
         <activity
             android:name=".N_LauncherActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <!-- Aktivitas untuk form -->
@@ -50,8 +46,14 @@
             android:name=".N_LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".NotificationActivity"
-            android:exported="false" />
+            android:name=".J_NotificationActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
