--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,40 +1,97 @@
+// app/build.gradle (Module: app)
+
 plugins {
-    alias(libs.plugins.android.application)
+    id 'com.android.application'
+    // ... plugin lain yang mungkin Anda miliki (misalnya 'org.jetbrains.kotlin.android')
+
+    // Terapkan Plugin Google Services
+    id 'com.google.gms.google-services'
 }
 
 android {
-    namespace 'com.example.huddleup'
-    compileSdk 35
+    namespace 'com.example.huddleup' // PASTIKAN INI ADALAH NAMA PAKET ANDA YANG BENAR
+    compileSdk 34 // Sesuaikan dengan compileSdk Anda
+    // ... konfigurasi Android lainnya
 
     defaultConfig {
-        applicationId "com.example.huddleup"
-        minSdk 29
-        targetSdk 35
+        applicationId "com.example.huddleup" // PASTIKAN INI JUGA SAMA DENGAN NAMESPACE
+        minSdk 24
+        targetSdk 34
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
+    // Dependensi default Android Studio (jangan dihapus)
+    implementation 'androidx.core:core-ktx:1.13.1' // Versi terbaru
+    implementation 'androidx.appcompat:appcompat:1.6.1' // Versi terbaru
+    implementation 'com.google.android.material:material:1.12.0' // Versi terbaru untuk Material Design & FAB
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4' // Versi terbaru
+    implementation 'androidx.activity:activity:1.9.0' // Versi terbaru untuk Activity
+    implementation 'androidx.fragment:fragment:1.7.1' // Versi terbaru untuk Fragment (jika dipakai)
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.activity
-    implementation libs.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+    // --- DEPENDENSI FIREBASE DAN UI UNTUK PROYEK ANDA ---
+
+    // Direkomendasikan: Tambahkan Firebase BOM (Bill of Materials)
+    // Ini memastikan semua versi pustaka Firebase yang Anda gunakan kompatibel.
+    // Selalu cek versi BOM terbaru di https://firebase.google.com/docs/android/setup#available-libraries
+    implementation(platform('com.google.firebase:firebase-bom:32.7.4')) // <-- Gunakan versi BOM terbaru!
+
+    // Dependensi untuk Firebase Realtime Database
+    implementation 'com.google.firebase:firebase-database'
+
+    // Dependensi untuk komponen UI yang kita gunakan (RecyclerView dan CardView)
+    implementation 'androidx.cardview:cardview:1.0.0' // Versi terbaru
+    implementation 'androidx.recyclerview:recyclerview:1.3.0' // Versi terbaru
+
+    // Jika Anda menggunakan Firebase Authentication (opsional, jika tim Anda menggunakannya)
+    // implementation 'com.google.firebase:firebase-auth'
 }
+
+//plugins {
+//    alias(libs.plugins.android.application)
+//    alias(libs.plugins.google.gms.google.services)
+//}
+//
+//android {
+//    namespace 'com.example.huddleup'
+//    compileSdk 35
+//
+//    defaultConfig {
+//        applicationId "com.example.huddleup"
+//        minSdk 29
+//        targetSdk 35
+//        versionCode 1
+//        versionName "1.0"
+//
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//    }
+//
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
+//    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_11
+//        targetCompatibility JavaVersion.VERSION_11
+//    }
+//}
+//
+//dependencies {
+//
+//    implementation libs.appcompat
+//    implementation libs.material
+//    implementation libs.activity
+//    implementation libs.constraintlayout
+//    implementation libs.firebase.database
+//    testImplementation libs.junit
+//    androidTestImplementation libs.ext.junit
+//    androidTestImplementation libs.espresso.core
+//}
