--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.huddleup">
 
     <application
         android:label="HuddleUp"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HuddleUp">
 
         <activity
-            android:name=".EventDashboardActivity"
+            android:name=".CategoryListActivityK"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".AddEventActivity"
+        <activity android:name=".CategoryCreationActivityK"
             android:exported="false" />
+        <activity android:name=".CategoryEventListActivityK"
+            android:exported="false" />
+
+
     </application>
 </manifest>
