--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,36 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-<<<<<<< HEAD
-    package="com.example.huddleup">
-=======
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.huddleup">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
->>>>>>> 5b82418c590eed52fd91a5e118093a5ef949ab6f
-
     <application
         android:label="HuddleUp"
         android:supportsRtl="true"
-<<<<<<< HEAD
-        android:theme="@style/Theme.HuddleUp">
+        android:theme="@style/Theme.HuddleUp"
+        tools:targetApi="31">
+
+        <activity
+            android:name=".N_LauncherActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".CategoryListActivityK"
-=======
-        android:theme="@style/Theme.HuddleUp"
-        tools:targetApi="31">
+            android:exported="false" />
+        <activity
+            android:name=".CategoryCreationActivityK"
+            android:exported="false" />
+        <activity
+            android:name=".CategoryEventListActivityK"
+            android:exported="false" />
+
         <activity android:name=".Z_MainActivity"
             android:exported="false" />
         <activity
@@ -38,37 +48,14 @@
         <activity
             android:name=".WishlistActivity"
             android:exported="false" />
-        <activity
-            android:name=".N_LauncherActivity"
->>>>>>> 5b82418c590eed52fd91a5e118093a5ef949ab6f
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-<<<<<<< HEAD
 
-        <activity android:name=".CategoryCreationActivityK"
-            android:exported="false" />
-        <activity android:name=".CategoryEventListActivityK"
-            android:exported="false" />
-
-
-    </application>
-</manifest>
-=======
-
-        <!-- Aktivitas untuk form -->
-        <activity android:name=".EventFormActivity" />
-
-        <activity
-            android:name=".N_LoginActivity"
-            android:exported="false" />
+        <activity android:name=".EventFormActivity"
+            android:exported="false" /> <activity
+        android:name=".N_LoginActivity"
+        android:exported="false" />
         <activity
             android:name=".NotificationActivity"
             android:exported="false" />
-    </application>
 
+    </application>
 </manifest>
->>>>>>> 5b82418c590eed52fd91a5e118093a5ef949ab6f
