--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,30 @@
-<<<<<<< HEAD
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
-        classpath 'com.google.gms:google-services:4.4.1'
-    }
-}
-=======
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    dependencies {
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }
 
 plugins {
     alias(libs.plugins.androidApplication) apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.23' apply false
     alias(libs.plugins.googleGmsGoogleServices) apply false
 }
 
 allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
     configurations.all {
         resolutionStrategy.eachDependency { details ->
             if (details.requested.group == 'org.jetbrains.kotlin') {
-                details.useVersion '1.9.22'
+                details.useVersion '1.9.23'
                 details.because 'Force use of a single Kotlin version to avoid duplicate classes'
             }
         }
     }
 }
->>>>>>> 5b82418c590eed52fd91a5e118093a5ef949ab6f
